objects/disco__LaunchPad__c.object
<CustomObject>
    <fields>
        <fullName>disco__Background_Image_Id__c</fullName>
        <label>Background Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Canvas_Data__c</fullName>
        <label>Canvas Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Filtered_Lookups__c</fullName>
        <description>lookups that are filtered on global lookups</description>
        <inlineHelpText>lookups that are filtered on global lookups</inlineHelpText>
        <label>Filtered Lookups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Global_Lookups__c</fullName>
        <label>Global Lookups</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>disco__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drafting</fullName>
                </value>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Template_Ids__c</fullName>
        <label>Template Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>LaunchPad</label>
    <listViews>
        <fullName>disco__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LaunchPad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LaunchPads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>